[workspace]
resolver = "2"
members = [
    "crates/turbine-core",
    "crates/turbine-broker",
    "crates/turbine-backend",
    "crates/turbine-server",
    "crates/turbine-worker",
    "crates/turbine-telemetry",
    "crates/turbine-dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Turbine Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/turbine-queue/turbine"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack

# Configuration
config = "0.14"
toml = "0.8"

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"

# gRPC
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"
prost-types = "0.12"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Internal crates
turbine-core = { path = "crates/turbine-core" }
turbine-broker = { path = "crates/turbine-broker" }
turbine-backend = { path = "crates/turbine-backend" }
turbine-telemetry = { path = "crates/turbine-telemetry" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
