[package]
name = "turbine-broker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Message broker abstraction layer for Turbine"

[dependencies]
turbine-core = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Redis
redis = { workspace = true }
deadpool-redis = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
