[package]
name = "turbine-broker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Message broker abstraction layer for Turbine"

[features]
default = ["redis"]
redis = ["dep:redis", "dep:deadpool-redis"]
rabbitmq = ["dep:lapin", "dep:deadpool-lapin"]
sqs = ["dep:aws-sdk-sqs", "dep:aws-config", "dep:base64"]

[dependencies]
turbine-core = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Redis (optional)
redis = { workspace = true, optional = true }
deadpool-redis = { workspace = true, optional = true }

# RabbitMQ (optional)
lapin = { version = "2.3", optional = true }
deadpool-lapin = { version = "0.11", optional = true }

# AWS SQS (optional)
aws-sdk-sqs = { version = "1.15", optional = true }
aws-config = { version = "1.1", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
