[package]
name = "turbine-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for Turbine distributed task queue"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
config = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
