[package]
name = "turbine-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for Turbine distributed task queue"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
config = { workspace = true }
toml = { workspace = true }

# Encryption (optional)
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
zeroize = { version = "1.7", optional = true, features = ["derive"] }

[features]
default = []
encryption = ["dep:aes-gcm", "dep:rand", "dep:base64", "dep:zeroize"]

[dev-dependencies]
tokio = { workspace = true }
