[package]
name = "turbine-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Turbine server - gRPC API and task coordination"

[[bin]]
name = "turbine-server"
path = "src/main.rs"

[dependencies]
turbine-core = { workspace = true }
turbine-broker = { workspace = true }
turbine-backend = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[features]
default = []
proto-gen = ["dep:tonic-build"]

[build-dependencies]
tonic-build = { workspace = true, optional = true }
