[package]
name = "turbine-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Turbine server - gRPC API and task coordination"

[[bin]]
name = "turbine-server"
path = "src/main.rs"

[dependencies]
turbine-core = { workspace = true }
turbine-broker = { workspace = true }
turbine-backend = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Scheduler
cron = "0.12"

# Routing
regex = "1.10"

[features]
default = []
proto-gen = ["dep:tonic-build"]

[build-dependencies]
tonic-build = { workspace = true, optional = true }

[package.metadata.deb]
maintainer = "Turbine Contributors <turbine@example.com>"
copyright = "2025, Turbine Contributors"
license-file = ["../../LICENSE", "0"]
extended-description = """
Turbine is a high-performance distributed task queue written in Rust.
This package contains the server component that coordinates task
distribution, manages queues, and provides the gRPC API.
"""
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/turbine-server", "usr/bin/", "755"],
    ["../../debian/turbine.toml", "etc/turbine/turbine.toml", "640"],
    ["../../debian/turbine-server.service", "lib/systemd/system/", "644"],
]
maintainer-scripts = "../../debian/"
systemd-units = { enable = false }
