[package]
name = "turbine-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Integration tests for Turbine"
publish = false

[dependencies]
turbine-core = { workspace = true, features = ["encryption"] }
turbine-broker = { workspace = true, features = ["redis"] }
turbine-backend = { workspace = true }
turbine-server = { path = "../turbine-server" }

tokio = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
