[package]
name = "turbine-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Turbine worker - task execution engine"

[[bin]]
name = "turbine-worker"
path = "src/main.rs"

[dependencies]
turbine-core = { workspace = true }
turbine-broker = { workspace = true }
turbine-backend = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }

# Process management
nix = { version = "0.27", features = ["signal", "process"] }
