[package]
name = "turbine-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Turbine worker - task execution engine"

[[bin]]
name = "turbine-worker"
path = "src/main.rs"

[dependencies]
turbine-core = { workspace = true }
turbine-broker = { workspace = true }
turbine-backend = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }

# Process management
nix = { version = "0.27", features = ["signal", "process"] }

[package.metadata.deb]
maintainer = "Turbine Contributors <turbine@example.com>"
copyright = "2025, Turbine Contributors"
license-file = ["../../LICENSE", "0"]
extended-description = """
Turbine is a high-performance distributed task queue written in Rust.
This package contains the worker component that executes tasks
from the queue with support for concurrency, timeouts, and retries.
"""
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/turbine-worker", "usr/bin/", "755"],
    ["../../debian/turbine-worker.service", "lib/systemd/system/", "644"],
    ["../../debian/turbine-worker@.service", "lib/systemd/system/", "644"],
]
systemd-units = { enable = false }
